package com.example.recipeShoppingList

abstract class AbstractItem {
    protected abstract val itemName: String

}