@startuml
hide empty members



class ItemListBuilder #lightblue{
    + addRecipeUnit()
    + addInstructions()
    + addDescription()
    + build()
}
ItemListBuilder ..> Recipe: <<create>>
ItemListBuilder ..> ShoppingList: <<create>>

class ItemBuilder #lightblue{
   + addUnit()
   + addName()
   + build()
}
ItemBuilder ..> ConcreteItem: <<create>>

abstract class AbstractItem #lightblue{
   - unit
   - name
   + changeItem()
}
AbstractItem ..o AbstractItemList
AbstractItem -- Unit

class ShoppingList #lightblue
ShoppingList "0..*" --|> "1" AbstractItemList

class Recipe #lightblue {
    - instructions
    - description
    + getInstructions()
    + setInstructions()
    + getDescription()
    + setDescription()
}
Recipe "0..*" --|> "1" AbstractItemList
Recipe -- Quantity

abstract class AbstractItemList #lightblue{
   - name: const str
   - itemQuantity: [item: Quantity]
   - dataBaseName: const str
   + addItem()
   + removeItem()
   + getItems()
   + storeList()
   + changeList()
   + getName()
}

class ConcreteItem #lightblue
ConcreteItem --|> AbstractItem

class Quantity #lightblue{
    - unit: Unit
    - quantity: int
    + getUnit()
    + getQuantity()
}

class Unit #lightblue{
    - unit: str
    + getUnit()
}

legend bottom right
| **Color**         | **Layer**             |
| <#lightblue>      | Application layer     |
end legend
@enduml